--- a/static/output.css
+++ b/static/output.css
@@ -898,19 +898,19 @@
   .bg-white {
     background-color: var(--color-white);
   }
-  .bg-linear-to-r {
+  .bg-gradient-to-r {
     --tw-gradient-position: to right in oklab;
     background-image: linear-gradient(var(--tw-gradient-stops));
   }
   .bg-hero-bg-mobile {
     background-image: url('/static/images/gym/smart-mirror-mobile.jpeg');
   }
-  .from-black\/30 {
-    --tw-gradient-from: color-mix(in oklab, var(--color-black) 30%, transparent);
+  .from-black\/50 {
+    --tw-gradient-from: color-mix(in oklab, var(--color-black) 50%, transparent);
     --tw-gradient-stops: var(--tw-gradient-via-stops, var(--tw-gradient-position), var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-to) var(--tw-gradient-to-position));
   }
-  .to-black\/60 {
-    --tw-gradient-to: color-mix(in oklab, var(--color-black) 60%, transparent);
+  .to-black\/70 {
+    --tw-gradient-to: color-mix(in oklab, var(--color-black) 70%, transparent);
     --tw-gradient-stops: var(--tw-gradient-via-stops, var(--tw-gradient-position), var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-to) var(--tw-gradient-to-position));
   }
   .bg-cover {
